--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,81 @@ li{
 
 .image-container{
     background-image: url('/resort.jpg');
+    background-size: cover;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.image-container div{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.image-container a{
+   
+    background-color: #008080;
     
-    width: 100%;
+    padding: 12px;
+    width: fit-content;
+    font-style:Sans-serif;
+    margin-top: 10px;
+    font-weight: 100;
+    font-size: 14px;
+}
+
+/* search */
+
+.search{
+    height: 140px;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    background-color: #008080;
+    color: white;
+    font-weight: 100;
+    margin-bottom: 20px;
+}
+.search div{
+    margin-top: 10px;
+    display: flex; 
+    justify-content: center;
+    flex-direction: column;
+}
+
+.search input {
+ padding: 5px;
+ font-size: 18px;
+ width: 500px;
+ border: #f4f4f4 3px solid;
+
+}
+
+/* icon boxes */
+.container{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.container div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    width: 150px;
+    border: #f4f4f4 3px solid;
+    padding: 10px;
+
+    text-align: center;
+    box-shadow: 0.5px 3px 3px #008080;
+    margin-bottom: 10px;
+
+}
+
+.container label{
+    font-size: 26px;
+    font-weight: 600;
 }
