--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 nav {
     display: flex;
     justify-content: space-around;
@@ -47,7 +51,7 @@ li{
 /* image container*/
 
 .image-container{
-    background-image: url('/resort.jpg');
+    background-image: url('/images/resort.jpg');
     background-size: cover;
     height: 400px;
     display: flex;
@@ -105,6 +109,7 @@ li{
     justify-content: center;
     gap: 50px;
     background-color: rgba(255, 255, 255, 0.554);
+    padding: 20px;
 }
 
 .box-container div {
@@ -138,7 +143,7 @@ li{
 .popular h1{
 text-align: center;
 font-weight: 300;
-font-size: x;
+padding: 20px;
 }
 
 .popular span{
@@ -167,4 +172,10 @@ padding: 0px 20px 20px 20px;
     text-align: center;
     font-size: 26px;
 }
+
+#popular-places{
+scroll-behavior: smooth;
+} 
+
+
 
